--- a/08-conclusion.ipynb
+++ b/08-conclusion.ipynb
@@ -106,9 +106,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:intro-to-ml-with-python] *",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-intro-to-ml-with-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -120,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   },
   "toc-autonumbering": false
  },
